your changes description

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,7 @@ SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
 SMTP_FROM=your-email@gmail.com
 
-# WhatsApp (optional - set WHATSAPP_ENABLED=1 and add Twilio credentials)
-# npm install twilio
-WHATSAPP_ENABLED=0
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
+# WhatsApp (uses wa.me links by default; no API credentials required)
+# The app will redirect users to WhatsApp Web/mobile with a prefilled message.
+# If you host generated PDFs publicly, set PUBLIC_BASE_URL and MEDIA_TOKEN so links can be included in messages.
+# Example: PUBLIC_BASE_URL=https://yourdomain.com MEDIA_TOKEN=secret-token
